fix to avoid wrapping of university address in footer (it drops below logo instead on narrow)

--- a/assets/scss/frameless.scss
+++ b/assets/scss/frameless.scss
@@ -154,7 +154,6 @@ nav {
 		}
 	}
 	#university{
-		width:65%;
 		height:100px;
 		float:left;
 	}
@@ -209,8 +208,8 @@ nav {
 	}
 }
 
-@media (min-width: 1001px) {
-	#bottom { 
+@media (min-width: 1050px) {
+	#bottom {
 		position:absolute;
 		@include width(12);
 		background:none;
